--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": ["src/clouddata.js", "src/popup.js"]
+		"ignore": ["src/clouddata.js", "src/popup.js", "dist/**"]
 	},
 	"formatter": {
 		"enabled": true,
